# dev-context-capsule

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
capsule/: __init__.py  server.py
capsule/agents/: _llm.py  capture.py  restore.py  ticket_context.py
capsule/guardrails/: sanitizer.py
capsule/hooks/: install.py
capsule/mcp_tools/: claude_session_reader.py  git_reader.py  github_reader.py  jira_reader.py  linear_reader.py  ticket_reader.py  vscode_reader.py
capsule/memory/: store.py
capsule/rag/: retriever.py
docs/: architecture.md
tests/: test_linear_reader.py  test_sanitizer.py
vscode-extension/: extension.js  package.json
