[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dev-context-capsule"
version = "0.1.0"
description = "MCP server that captures and restores dev context mid-task"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "anthropic>=0.40",
    "gitpython>=3.1",
    "pydantic>=2.0",
    "scikit-learn>=1.4",   # TF-IDF for RAG
    "numpy>=1.26",
    "httpx>=0.27",         # Linear API calls
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
litellm = [
    "openai>=1.0",          # any OpenAI-compatible proxy (LiteLLM, etc.)
]
bedrock = [
    "anthropic[bedrock]>=0.40",  # AWS Bedrock
]

[project.scripts]
capsule = "capsule.server:main"

[tool.hatch.build.targets.wheel]
packages = ["capsule"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
